<resources>
    <string name="app_name">FamBazzar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="login_here">login here</string>
    <string name="first_name">First Name</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="select_province">Select Province</string>
    <string name="select_city">Select City</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="store_name">Store Name</string>
    <string name="setup">Setup</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="dozen">Dozen</string>
    <string name="liter">Liter</string>
    <string name="kilo">Kilo</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="quantity">quantity:</string>
    <string name="select_category">Select Category</string>
    <string name="status">Status</string>
    <string name="discontinue">Discontinue</string>
    <string name="active">Active</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="store_desc">About Store</string>
    <string name="update">Update</string>
    <string name="change_photo">change Photo</string>
    <string name="dateofbith">Date Of Birth</string>
    <string name="city">city</string>
    <string name="gender">Gender</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate">Rate</string>
    <string name="offers_delivery_out_of_city">Offers Delivery Out Of city</string>
    <string name="plz_select_city">Please Select City</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong">"Something went Wrong Error : </string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="product_details">Product Details</string>
    <string name="product_ratings">Product Ratings</string>
    <string name="delivery_charges">Delivery Charges :\t</string>
    <string name="rupees"> Rupees\t</string>
    <string name="price">\Price \t</string>
    <string name="quantity_in_details">Quantity :\t </string>
    <string name="unit_in_details">unit\t</string>
    <string name="description_in_detail">Description</string>
    <string name="home">Home</string>
    <string name="search_fragment">Search</string>
    <string name="rs">RS</string>
    <string name="fragment_product_store">Product Store</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price_in_rupees">Price in rupees</string>
    <string name="select_category_toast">Select Category</string>
    <string name="select_product_unit_toast">Please Select Product Unit</string>
    <string name="apply">Apply</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="error_code">"Error\t "</string>
    <string name="location">Location:</string>
    <string name="add_product">Add Product</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="already_added_to_cart">Item is Already added in Cart</string>
    <string name="buyers_section">Buyer Section</string>
    <string name="see_full_profile">See Full Profile</string>
    <string name="seller_section">Seller Section</string>
    <string name="setup_store">Setup Store</string>
    <string name="go_to_store">Go to Store</string>
    <string name="active_products">Active Products</string>
    <string name="distcontinued_products">Discontinued Products</string>
    <string name="active_orders">Active Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="seller_settings">Settings</string>
    <string name="add_new_product_frag">Add New Product</string>
    <string name="select_first_image">Select First Image</string>
    <string name="select_second_image">Select Second Image</string>
    <string name="select_third_image">Select Third Image</string>
    <string name="plz_select_product_unit">Please Select Product Unit</string>
    <string name="cattle">Cattle</string>
    <string name="please_select_city">Please Select City</string>
    <string name="log_out_button_text">Log out</string>
    <string name="default_quantity">1</string>
    <string name="total_rs">Total Rs</string>
    <string name="check_out">Check Out</string>
    <string name="shipping_fees">Shipping Fees</string>
    <string name="subtotal">Subtotal</string>
    <string name="active_products_frag">Active Products</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="edit_product">Edit Product</string>
    <string name="order_details_as_seller">Order Details as Seller</string>
    <string name="order_details_as_buyer_frag">Order Details as Buyer</string>
    <string name="store_setting">Store Setting</string>
    <string name="edit_store_details">Edit Store Details</string>
    <string name="full_user_details">Full User Details</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="edit_personal_info_frag">Edit Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="order_history">Order History</string>
    <string name="current_orders">Current Orders</string>
    <string name="cart">Cart</string>
    <string name="buyers_order_history">Buyer\'s Orders History</string>
    <string name="buyer_current_orders">Buyer Current Orders</string>
    <string name="order_details">Order Details</string>
    <string name="payment_options">Payment Options</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="place_order">Place Order</string>
    <string name="see_All">See All</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="cod">Cash On Delivery</string>

    <string name="search">Search</string>
    <string name="community">Community</string>

    <string name="profile">Profile</string>
    <string name="community_section">Community Section</string>
    <string name="choose_image">Choose Image</string>
    <string name="camera">Camera</string>
    <string name="my_contributions">My Contributions</string>
    <string name="title">title</string>
    <string name="date">Date</string>
    <string name="buyer_dashboard">Buyer Dashboard</string>
    <string name="community_contributions">Community Contributions</string>

    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="add_post">Add Post</string>
    <string name="add_image">Add Image</string>
    <string name="select_image">Please Select Image</string>
    <string name="add_community_post">Add Community Post</string>
    <string name="published_by">Published by</string>
    <string name="published_on">Published On</string>
    <string name="post_details">Post Details</string>
    <string name="app_needs_permissions_to_pick_image">App Needs Permission to Pick Image</string>
    <string name="update_post">Update Post</string>
    <string name="edit_community_post">Edit Community Post</string>
    <string name="see_all">See All</string>
    <string name="search_product_here">Search Product Here</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filter_applied">Filters Applied</string>
    <string name="filters_cleared">Filters Cleared</string>
    <string name="don_t_have_account">Don\'t have Account ?</string>

    <string name="create_account">Create Account</string>
    <string name="enter_query_to_search">Please Enter Query to Search</string>
    <string name="sindhi">سنڌي</string>
    <string name="from_farm_to_kitchen">From Farm to Kitchen</string>
    <string name="continue_">Continue</string>
    <string name="cancel_order">Cancel Order</string>

    <string name="order_details_not_loaded">Order Details are not loaded yet</string>

    <string name="no_current_orders">No Current Orders</string>

    <string name="no_completed_orders_yet">No Completed Orders Yet</string>
    <string name="no_active_orders_yet">No Active Orders Yet</string>
    <string name="no_active_products">No Active Products</string>
    <string name="no_discontinued_yet">No Product is Discontinued Yet</string>
    <string name="no_results_found">No Results Found</string>
    <string name="enter_text">Please Enter Some Text</string>
    <string name="fambazzar">FamBazzar</string>


    <string name="no_items_found_in">Sorry , No Products Found</string>
    <string name="change_language">Change Language</string>
    <string name="do_you_provide_cash_on_delivery_out_of_city">Do you Provide Cash on Delivery Out Of City ?</string>
    <string name="code_note">You will need to open a Cash on delivery account on your nearest Courier service provider</string>


    <string name="no_contributions_yet">No Contributions Yet</string>
    <string name="cod_out_of_city">COD out of city</string>
    <string name="owner">Owner</string>
    <string name="quantity_unit">Quantity unit:</string>




    <!--    <string name="create_account">Create Account</string>-->


</resources>