<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />


    <item android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        />

    <item android:id="@+id/communityFragment"
        android:title="@string/community"
        android:icon="@drawable/ic_baseline_feed_cummunity_24"
        />

    <item android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_cart_bag_24"
        />


    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_profile_24"
        />




</menu>